Improve formatting of filter-table to avoid wrapping

--- a/src/static/assets/css/testflinger.css
+++ b/src/static/assets/css/testflinger.css
@@ -78,6 +78,10 @@ main {
     background-color: lightgrey;
 }
 
+.filter-table table {
+    table-layout: auto;
+}
+
 .filter-table table th {
     background-color: #333333;
     color: white;
